--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,8 @@
 
+*{
+    box-sizing: border-box;
+}
+
 body{
     width: 100vw;
     height: 100vh;
@@ -6,14 +10,21 @@ body{
 
 }
 
-#main-container{
+#root{
     width: 100%;
     height: 100%;
+    overflow: hidden;
+}
+
+#main-container{
+    width: 100vw;
+    height: 100vh;
     padding: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 #form-main{
@@ -40,7 +51,7 @@ body{
     height: 100vh;
     top: 0;
     padding: 0.7rem;
-    left: 0;
+    left: 0px;
     background-color: rgba(211, 211, 211, 0.6);
 }
 
@@ -58,4 +69,7 @@ body{
         padding: 0.5rem;
     }
 
+    #backgroundBlur{
+        width: 100vw;
+    }
 }
